force-app/main/default/objects/DraftForm__c/DraftForm__c.object-meta.xml
<CustomObject>
    <label>Draft Form</label>
    <nameField>
        <label>Draft Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Draft Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>