force-app/main/default/objects/DraftForm__c/fields/Created_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_Record_ID__c</fullName>
    <label>Created Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>