force-app/main/default/objects/DraftForm__c/fields/Form_Data_JSON__c.field-meta.xml
<CustomField>
    <fullName>Form_Data_JSON__c</fullName>
    <label>Form Data JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>