force-app/main/default/objects/DraftForm__c/fields/Source_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_ID__c</fullName>
    <label>Source Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>