force-app/main/default/objects/DraftForm__c/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <label>Task ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>